Use slot.set. Closes #171
Signed-off-by: cpw <cpw+github@weeksfamily.ca>